--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -140,7 +140,7 @@
                 android:text="NOON 7AM"
                 android:textSize="16dp"
                 android:layout_marginLeft="30dp"
-                android:textColor="#FFFFFF" />
+                android:textColor="#FFF" />
 
 
             <Button
