--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -239,7 +239,6 @@
                 android:layout_marginLeft="10dp"
                 android:textColor="#FFFFFF" />
         </LinearLayout>
-
         <Button
             android:id="@+id/findSpot"
             android:layout_width="200dp"
@@ -251,6 +250,14 @@
             android:textColor="#FFF"
             android:layout_gravity="center"/>
     </LinearLayout>
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="6 facilities available in doha"
+        android:layout_marginLeft="30dp"
+        android:gravity="center"
+        android:textSize="16sp"
+        android:layout_marginTop="5dp"/>
     <ListView
         android:id="@+id/listview"
         android:layout_width="match_parent"
