--- a/app/src/main/res/layout/ground_detail_layout.xml
+++ b/app/src/main/res/layout/ground_detail_layout.xml
@@ -10,14 +10,6 @@
         android:orientation="vertical"
         android:layout_marginTop="5dp"
         android:background="#d7d7c1">
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="6 facilities available in doha"
-            android:layout_marginLeft="30dp"
-            android:gravity="center"
-            android:textSize="16sp"
-            android:layout_marginTop="5dp"/>
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -27,34 +19,45 @@
             android:background="#fff">
 
             <ImageView
+                android:id="@+id/imageview"
                 android:layout_width="320dp"
                 android:layout_height="200dp"
                 android:src="@drawable/football"
                 android:scaleType="fitXY"
                 android:padding="16dp"
                 android:layout_gravity="center"/>
-            <TextView
-                android:id="@+id/name"
-                android:layout_width="wrap_content"
+
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Name"
-                android:textSize="16sp"
-                android:layout_marginLeft="45dp"
-                />
-            <TextView
-                android:id="@+id/location"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="QATAR CLUB"
-                android:textSize="16sp"
-                android:layout_marginLeft="45dp"
-                />
+                android:orientation="horizontal">
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="QATAR CLUB"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="45dp"
+                    />
+                <TextView
+                    android:id="@+id/name"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Name"
+                    android:textSize="16sp"
+                    android:layout_marginLeft="45dp"
+                    />
+
+            </LinearLayout>
+
+
             <TextView
                 android:id="@+id/information"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="QATAR CLUB"
                 android:textSize="16sp"
+                android:layout_marginTop="5dp"
                 android:layout_marginLeft="45dp"
                 />
 
