--- a/app/src/main/res/layout/ground_detail_layout.xml
+++ b/app/src/main/res/layout/ground_detail_layout.xml
@@ -32,34 +32,89 @@
                 android:layout_height="wrap_content"
                 android:orientation="horizontal">
                 <TextView
-                    android:id="@+id/location"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="QATAR CLUB"
-                    android:textSize="16sp"
-                    android:layout_marginLeft="45dp"
-                    />
-                <TextView
                     android:id="@+id/name"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:text="Name"
-                    android:textSize="16sp"
+                    android:textSize="15sp"
+                    android:textStyle="bold"
                     android:layout_marginLeft="45dp"
                     />
 
+                <TextView
+                    android:id="@+id/location"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="QATAR CLUB"
+                    android:textSize="15sp"
+                    android:layout_marginLeft="40dp"
+                    />
+
             </LinearLayout>
-
-
-            <TextView
-                android:id="@+id/information"
-                android:layout_width="wrap_content"
+            <LinearLayout
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="QATAR CLUB"
-                android:textSize="16sp"
-                android:layout_marginTop="5dp"
-                android:layout_marginLeft="45dp"
-                />
+                android:orientation="horizontal">
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Information:"
+                    android:textSize="16sp"
+                    android:textStyle="bold"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="45dp"
+                    />
+                <TextView
+                    android:id="@+id/information"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="QATAR CLUB"
+                    android:textSize="14sp"
+                    android:layout_marginTop="5dp"
+                    android:layout_marginLeft="10dp"
+                    />
+            </LinearLayout>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:padding="5dp"
+                android:gravity="center">
+
+                <Button
+                    android:layout_width="65dp"
+                    android:layout_height="30dp"
+                    android:text="6:30"
+                    android:textSize="15dp"
+                    android:textColor="#FFFFFF"
+                    android:background="@drawable/backbtn_shape"/>
+
+                <Button
+                    android:layout_width="65dp"
+                    android:layout_height="30dp"
+                    android:text="6:30"
+                    android:textSize="15dp"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/backbtn_shape"/>
+
+                <Button
+                    android:layout_width="65dp"
+                    android:layout_height="30dp"
+                    android:text="6:30"
+                    android:textSize="15dp"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/backbtn_shape"/>
+                <Button
+                    android:layout_width="65dp"
+                    android:layout_height="30dp"
+                    android:text="6:30"
+                    android:textSize="15dp"
+                    android:textColor="#FFFFFF"
+                    android:layout_marginLeft="20dp"
+                    android:background="@drawable/backbtn_shape"/>
+            </LinearLayout>
 
         </LinearLayout>
     </LinearLayout>
