--- a/app/src/main/res/menu/bottom_nav_items.xml
+++ b/app/src/main/res/menu/bottom_nav_items.xml
@@ -2,11 +2,14 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:title="search"/>
+        android:title="search"
+        android:icon="@mipmap/ic_launcher_round"/>
 
     <item
-        android:title="home"/>
+        android:title="home"
+        android:icon="@mipmap/ic_launcher"/>
 
     <item
-        android:title="profile"/>
+        android:title="profile"
+        android:icon="@mipmap/ic_launcher"/>
 </menu>
